crop milk explained

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -998,6 +998,10 @@
         "Definition": "Specialized stinging cells found in coelenterates like jellyfish."
         },
         {
+        "Term": "Crop milk",
+        "Definition": "Produced by certain birds like pigeons, differs from mammalian milk as it is a nutrient-rich secretion from the lining of the crop (part of their digestive tract) rather than being produced by mammary glands."
+        },
+        {
         "Term": "Digestive tract",
         "Definition": "A system of organs in animals that processes food, typically including a mouth and anus."
         },
