--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -5,7 +5,7 @@
             "features": [
                 {
                     "name": "backbone",
-                    "question": "Does the animal have a backbone, spine, or notochord?"
+                    "question": "Does the animal have a backbone (spine) or notochord?"
                 },
                 {
                     "name": "central nervous system",
@@ -64,7 +64,7 @@
                 },
                 {
                     "name": "short pregnancy",
-                    "question": "Does the animal have a short pregnancy before giving birth to live young (as opposed to laying eggs)?"
+                    "question": "Does the animal have a short pregnancy (12 to 39 days) before giving birth to live young (as opposed to laying eggs)?"
                 }
             ]
         },
@@ -166,7 +166,7 @@
                 },
                 {
                     "name": "streamlined or symmetrical body",
-                    "question": "Does the fish have a more streamlined or symmetrical body and often appear in schools or large groups?"
+                    "question": "Does the fish have a streamlined or symmetrical body and often appear in schools or large groups?"
                 }
             ]
         },
@@ -260,7 +260,7 @@
             "features": [
                 {
                     "name": "aquatic",
-                    "question": "Does the animal live primarily in aquatic environments?"
+                    "question": "Does the animal live primarily in aquatic environments (like oceans, rivers, and lakes)?"
                 },
                 {
                     "name": "pairs of antennae",
@@ -285,7 +285,7 @@
                 },
                 {
                     "name": "fangs or small mandibles",
-                    "question": "Does the animal have large fangs (for injecting venom) or smaller mandibles for grinding vegetation?"
+                    "question": "Does the animal have large fangs (for injecting venom) or smaller mandibles (strong jaws) for grinding vegetation?"
                 }
             ]
         },
@@ -387,7 +387,7 @@
                 },
                 {
                     "name": "stay in one place",
-                    "question": "Does the animal stay in one place, attached to a surface (polyplop form), for its whole life instead of swimming freely?"
+                    "question": "Does the animal stay in one place (polyplop form), attached to a surface, for its whole life instead of swimming freely?"
                 }
             ]
         },
@@ -972,112 +972,128 @@
         "You can always access these instructions by clicking the question mark button in the top right corner.\n",
         "We hope you enjoy using the system and that it proves helpful in your animal classification journey!\n"
     ],
-    "Dictionary": [
-        {
-        "Term": "Acoelomate",
-        "Definition": "An animal that lacks a body cavity (coelom). Example: flatworms."
-        },
-        {
-        "Term": "Bilateral symmetry",
-        "Definition": "A body plan where the left and right sides of the body are mirror images of each other."
-        },
-        {
-        "Term": "Carapace",
-        "Definition": "A hard outer shell that protects some animals, like crabs or turtles."
-        },
-        {
-        "Term": "Cartilage",
-        "Definition": "A flexible connective tissue found in animals, often in their skeletons."
-        },
-        {
+"Dictionary": [
+    {
+      "Term": "Acoelomate",
+      "Definition": "Animals that do not have a body cavity."
+    },
+    {
+      "Term": "Antennae",
+      "Definition": "Feelers on the head of some animals, like insects, that help them sense the world."
+    },
+    {
+      "Term": "Appendages",
+      "Definition": "Extra parts like legs, arms, or antennae that help animals move or feel things."
+    },
+    {
+      "Term": "Bilateral symmetry",
+      "Definition": "When the body can be divided into two equal halves, like in butterflies."
+    },
+    {
+      "Term": "Body cavity",
+      "Definition": "A space inside the body, lined by membranes, where internal organs are kept and protected."
+    },
+    {
+      "Term": "Burrow",
+      "Definition": "To dig a hole or tunnel, usually for shelter or to live in."
+    },
+    {
+      "Term": "Budding",
+      "Definition": "When a new part of an animal grows from the parent and turns into a new animal."
+    },
+    {
+      "Term": "Central nervous system",
+      "Definition": "The brain and spinal cord that help animals move and think."
+    },
+    {
         "Term": "Cephalothorax",
-        "Definition": "A body region in some arthropods that combines the head and thorax into one part."
-        },
-        {
-        "Term": "Cnidocytes",
-        "Definition": "Specialized stinging cells found in coelenterates like jellyfish."
-        },
-        {
-        "Term": "Crop milk",
-        "Definition": "Produced by certain birds like pigeons, differs from mammalian milk as it is a nutrient-rich secretion from the lining of the crop (part of their digestive tract) rather than being produced by mammary glands."
-        },
-        {
-        "Term": "Digestive tract",
-        "Definition": "A system of organs in animals that processes food, typically including a mouth and anus."
-        },
-        {
-        "Term": "Diffusion",
-        "Definition": "The process by which molecules move from an area of higher concentration to lower concentration."
-        },
-        {
-        "Term": "Endoskeleton",
-        "Definition": "An internal skeleton made of bone or cartilage, found in vertebrates and echinoderms."
-        },
-        {
-        "Term": "Exoskeleton",
-        "Definition": "A hard, external covering or shell that supports and protects the body of some animals."
-        },
-        {
-        "Term": "Larva",
-        "Definition": "An immature stage in the life cycle of an animal that undergoes metamorphosis."
-        },
-        {
-        "Term": "Mantle",
-        "Definition": "A tissue layer in mollusks that secretes the shell and protects internal organs."
-        },
-        {
-        "Term": "Metamorphosis",
-        "Definition": "A biological process in which an animal changes its body form during its life cycle."
-        },
-        {
-        "Term": "Nematocyst",
-        "Definition": "A specialized cell containing a barbed or venomous coiled thread in cnidarians like jellyfish."
-        },
-        {
-        "Term": "Notochord",
-        "Definition": "A flexible rod-like structure that supports the body in all embryonic and some adult chordates."
-        },
-        {
-        "Term": "Ossicles",
-        "Definition": "Small calcareous plates that make up the endoskeleton of echinoderms."
-        },
-        {
-        "Term": "Placenta",
-        "Definition": "An organ in placental mammals that nourishes the fetus during gestation."
-        },
-        {
-        "Term": "Radial symmetry",
-        "Definition": "A body plan where parts are arranged around a central axis, as in jellyfish and starfish."
-        },
-        {
-        "Term": "Regenerate",
-        "Definition": "The ability to regrow lost or damaged body parts."
-        },
-        {
-        "Term": "Sessile",
-        "Definition": "Describes an organism that is fixed in one place and does not move."
-        },
-        {
-        "Term": "Stinging cells",
-        "Definition": "Specialized cells in cnidarians used for capturing prey and defense, containing nematocysts."
-        },
-        {
-        "Term": "Symmetry",
-        "Definition": "The balanced arrangement of body parts on either side of a dividing line or around a central point."
-        },
-        {
-        "Term": "Tentacles",
-        "Definition": "Flexible, elongated structures used for grasping, feeding, or sensory purposes in some animals."
-        },
-        {
-        "Term": "Vascular system",
-        "Definition": "A system of tubes in plants or animals for transporting fluids like blood or water."
-        },
-        {
-        "Term": "Vertebrates",
-        "Definition": "Animals with a backbone or spinal column."
-        }
-    ],
+        "Definition": "The fused head and thorax of spiders and other arthropods like scorpions and horseshoe crabs."
+    },
+    {
+      "Term": "Circulatory system",
+      "Definition": "The system that moves blood around the body to give the body oxygen and food."
+    },
+    {
+      "Term": "Compound eyes",
+      "Definition": "Eyes made of many small parts, helping animals like flies see in many directions."
+    },
+    {
+      "Term": "Crop milk",
+      "Definition": "A special kind of milk that some birds feed their babies."
+    },
+    {
+      "Term": "Diffusion",
+      "Definition": "When animals exchange gases, like oxygen and carbon dioxide, and remove waste through their skin or body surfaces."
+    },
+    {
+      "Term": "Endoskeleton",
+      "Definition": "An internal skeleton inside the body."
+    },
+    {
+      "Term": "Exoskeleton",
+      "Definition": "A hard outer shell that protects the body of animals, like insects and crabs."
+    },
+    {
+      "Term": "Larva",
+      "Definition": "An immature (first) form of an animal that looks different from the adult, like a caterpillar."
+    },
+    {
+      "Term": "Muscular foot",
+      "Definition": "A strong part of an animal's body that helps it move, like in snails."
+    },
+    {
+      "Term": "Notochord",
+      "Definition": "A soft, flexible rod that some animals have to support their body before they grow a backbone."
+    },
+    {
+      "Term": "Ossicles",
+      "Definition": "Tiny bones found inside animals like starfish."
+    },
+    {
+      "Term": "Parasite",
+      "Definition": "An animal that lives inside or on another animal and harms it, like a tick on a dog."
+    },
+    {
+      "Term": "Pedipalps",
+      "Definition": "Special parts on animals like spiders used for feeling or holding food."
+    },
+    {
+      "Term": "Placenta",
+      "Definition": "An organ inside the mother that gives food and oxygen to the baby before it is born."
+    },
+    {
+      "Term": "Pouch",
+      "Definition": "A special pocket on a mother's body where some animals carry their babies, like in kangaroos."
+    },
+    {
+      "Term": "Secretes",
+      "Definition": "To produce and release a substance."
+    },
+    {
+      "Term": "Segmented body",
+      "Definition": "A body that is divided into repeating parts."
+    },
+    {
+      "Term": "Tadpole",
+      "Definition": "The baby form of frogs, living in water with a tail before they grow legs."
+    },
+    {
+      "Term": "Thorax",
+      "Definition": "The middle part of an animal's body, where the legs and wings are, like in insects."
+    },
+    {
+      "Term": "True tissue",
+      "Definition": "Groups of special cells that work together to do a job in the body, like muscles or nerves."
+    },
+    {
+      "Term": "Unsegmented body",
+      "Definition": "A body that is not divided into parts."
+    },
+    {
+      "Term": "Water vascular system",
+      "Definition": "A system of tubes inside animals like starfish, used for moving and eating."
+    }
+  ],
     "Animal media": [
         {
             "vertebrates": {
