changed one fish question so that it doesnt overlap with amphibians

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -111,7 +111,7 @@
                 },
                 {
                     "name": "gills",
-                    "question": "Does the animal breathe with gills?"
+                    "question": "Does the animal breathe with gills throughout its entire life?"
                 },
                 {
                     "name": "in water",
